--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-<title>Brat Generator</title>
+<title>Gen-Z Text Generator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#222" />
 <link rel="stylesheet" href="./style.css">
@@ -12,7 +12,7 @@
  
   <div class="window">
     <div class="title-bar">
-      <div class="title-bar-text">Brat Generator</div>
+      <div class="title-bar-text">Gen-Z Text Generator</div>
     <div class="title-bar-controls">
       <button aria-label="Minimize"></button>
       <button aria-label="Maximize"></button>
