--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <br>
 
   <div class="flex-end">
-      <a href="https://github.com/mininxd/web/tree/brat">
-        <button>Source Code</button>
+      <a href="https://wa.me/6288991803498">
+        <button>WhatsApp Bot</button>
       </a>
-      <a href="https://saweria.co/mininxd">
+      <a href="https://saweria.co/gopalasu">
         <button>Donate</button>
       </a>
   </div>
